<resources>
    <string name="app_name">eSaras</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_and_living">Home and living</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="personal_care">Personal care</string>
    <string name="food_items">Food items</string>
    <string name="festival">Festival</string>
    <string name="preferences">PREFERENCES</string>
    <string name="language_english">Language - English</string>
    <string name="others">OTHERS</string>
    <string name="contact_us">Contact Us</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="categories">CATEGORIES</string>
    <string name="category2" />
    <string name="category3">\n\n</string>
    <string name="category1" />
    <string name="banner_image_description" />
    <string name="cart">\n\n</string>
    <string name="notifications">\t\t</string>
    <string name="search" />


</resources>