<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="80dp"
            android:id="@+id/menCategoryButton"
            android:layout_height="80dp"
            android:src="@drawable/menimage"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:contentDescription="@string/category1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Men"
            android:textAlignment="center"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/womenCategoryButton"
            android:src="@drawable/womenimage"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:contentDescription="@string/category2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Women"
            android:textAlignment="center"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/foodimage"
            android:scaleType="centerCrop"
            android:id="@+id/foodsCategoryButton"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:contentDescription="@string/category3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Foods"
            android:textAlignment="center"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:gravity="center">

        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/personalimage"
            android:id="@+id/personalCategoryButton"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:padding="8dp"
            android:contentDescription="@string/personal_care" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal "
            android:textAlignment="center"
            android:layout_marginTop="4dp" />
    </LinearLayout>


</LinearLayout>
